# prisoners-dilemma

./: Dockerfile  Dockerfile.guard  LICENSE  README.md  pyproject.toml  scenario.toml
.github/workflows/: pre-merge.yaml  publish.yml
dockerfiles/: Dockerfile.guard  Dockerfile.prisoner_betrayer  Dockerfile.prisoner_cooperator
src/prisoners/: client_cli.py  executor.py  run_scenario.py  tool_provider.py  types.py
src/prisoners/agents/: agent_card.py  base_agent.py  guard.py  prisoner.py  prisoner_betrayer.py  prisoner_cooperator.py  utils.py
tests/: test_agent_utils.py
